self hosted yml updated

--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -1,70 +1,73 @@
-name: CI/CD Pipeline
+name: Build and Deploy Flask App
 
 on:
   push:
-    branches: [main]
-
-env:
-  IMAGE_NAME: imnasim31415/vm-web-app
+    branches:
+      - main
 
 jobs:
   build-and-push:
-    name: Build and Push Docker Image
     runs-on: ubuntu-latest
 
     steps:
-      - name: Checkout code
+      - name: Checkout Code
         uses: actions/checkout@v4
 
-      - name: Log in to Docker Hub
-        run: echo "${{ secrets.DOCKER_PASSWORD }}" | docker login -u "${{ secrets.DOCKER_USERNAME }}" --password-stdin
+      - name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v3
 
-      - name: Get short commit hash
-        id: vars
-        run: echo "commit_hash=$(git rev-parse --short HEAD)" >> "$GITHUB_OUTPUT"
-
-      - name: Build Docker image
-        run: |
-          docker build -t $IMAGE_NAME:latest .
-          docker tag $IMAGE_NAME:latest $IMAGE_NAME:${{ steps.vars.outputs.commit_hash }}
-
-      - name: Push Docker image
-        run: |
-          docker push $IMAGE_NAME:latest
-          docker push $IMAGE_NAME:${{ steps.vars.outputs.commit_hash }}
-
-  deploy:
-    name: Deploy to 3 VMs
-    runs-on: ubuntu-latest
-    needs: build-and-push
-
-    strategy:
-      matrix:
-        vm: [vm1, vm2, vm3]
-
-    steps:
-      - name: Set up host variable
-        id: set-host
-        run: |
-          case "${{ matrix.vm }}" in
-            vm1) echo "host=${{ secrets.VM1_HOST }}" >> "$GITHUB_OUTPUT" ;;
-            vm2) echo "host=${{ secrets.VM2_HOST }}" >> "$GITHUB_OUTPUT" ;;
-            vm3) echo "host=${{ secrets.VM3_HOST }}" >> "$GITHUB_OUTPUT" ;;
-          esac
-
-      - name: Deploy to VM
-        uses: appleboy/ssh-action@v1.0.3
+      - name: Login to Docker Hub
+        uses: docker/login-action@v3
         with:
-          host: ${{ steps.set-host.outputs.host }}
-          username: ${{ secrets.VM_SSH_USER }}
-          key: ${{ secrets.VM_SSH_KEY }}
-          script: |
-            docker pull $IMAGE_NAME:latest
-            docker stop vm-web-app || true
-            docker rm vm-web-app || true
-            docker run -d \
-              -p 5000:5000 \
-              -e VM_HOSTNAME=$(hostname) \
-              -e COMMIT_HASH=${{ github.sha }} \
-              --name vm-web-app \
-              $IMAGE_NAME:latest
+          username: ${{ secrets.DOCKER_USERNAME }}
+          password: ${{ secrets.DOCKER_PASSWORD }}
+
+      - name: Build and Push Docker Image
+        uses: docker/build-push-action@v6
+        with:
+          context: .
+          push: true
+          tags: imnasim31415/vm-web-app:latest
+
+  deploy-vm1:
+    needs: build-and-push
+    runs-on: [self-hosted, vm1]
+    steps:
+      - name: Deploy on VM 1 using Docker
+        run: |
+          docker stop vm-web-app || true
+          docker rm vm-web-app || true
+          docker pull imnasim31415/vm-web-app:latest
+          docker run -d \
+            -p 5000:5000 \
+            --name vm-web-app \
+            -v /etc/hostname:/host_hostname:ro \
+            imnasim31415/vm-web-app:latest
+  deploy-vm2:
+    needs: build-and-push
+    runs-on: [self-hosted, vm2]
+    steps:
+      - name: Deploy on VM 2 using Docker
+        run: |
+          docker stop vm-web-app || true
+          docker rm vm-web-app || true
+          docker pull imnasim31415/vm-web-app:latest
+          docker run -d \
+            -p 5000:5000 \
+            --name vm-web-app \
+            -v /etc/hostname:/host_hostname:ro \
+            imnasim31415/vm-web-app:latest
+  deploy-vm3:
+    needs: build-and-push
+    runs-on: [self-hosted, vm3]
+    steps:
+      - name: Deploy on VM 3 using Docker
+        run: |
+          docker stop vm-web-app || true
+          docker rm vm-web-app || true
+          docker pull imnasim31415/vm-web-app:latest
+          docker run -d \
+            -p 5000:5000 \
+            --name vm-web-app \
+            -v /etc/hostname:/host_hostname:ro \
+            imnasim31415/vm-web-app:latest
