--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -22,13 +22,6 @@ jobs:
           username: ${{ secrets.DOCKER_USERNAME }}
           password: ${{ secrets.DOCKER_PASSWORD }}
 
-      - name: Get Git metadata
-        id: gitmeta
-        run: |
-          echo "GIT_BRANCH=$(git rev-parse --abbrev-ref HEAD)" >> $GITHUB_ENV
-          echo "GIT_COMMIT=$(git rev-parse HEAD)" >> $GITHUB_ENV
-          echo "GIT_MESSAGE=$(git log -1 --pretty=%B | head -n 1)" >> $GITHUB_ENV
-
       - name: Build and Push Docker Image
         uses: docker/build-push-action@v6
         with:
@@ -36,9 +29,9 @@ jobs:
           push: true
           tags: imnasim31415/vm-web-app:latest
           build-args: |
-            GIT_BRANCH=${{ env.GIT_BRANCH }}
-            GIT_COMMIT=${{ env.GIT_COMMIT }}
-            GIT_MESSAGE=${{ env.GIT_MESSAGE }}
+            GIT_BRANCH=${{ github.ref_name }}
+            GIT_COMMIT=${{ github.sha }}
+            GIT_MESSAGE=${{ github.event.head_commit.message }}
 
   deploy-vm1:
     needs: build-and-push
